--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
       <nav>
         <a href="">
-          <p>Web</p>
-          <p>Studio</p>
+          <span>Web</span>
+          Studio
         </a>
 
         <ul>
@@ -20,39 +20,43 @@
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      </ul>
     </header>
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
+
       <section>
+        <h2>Our Skills</h2>
         <ul>
           <li>
-            <h2>Strategy</h2>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h2>Punctuality</h2>
+            <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h2>Diligence</h2>
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h2>Technologies</h2>
+            <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -129,8 +133,8 @@
     </main>
     <footer>
       <a href="">
-        <p>Web</p>
-        <p>Studio</p>
+        <span>Web</span>
+        Studio
       </a>
       <p>
         Increase the flow of customers and sales for your business with digital
